[shopping-assistant] Added real call to product service for the categories